fix alignment of mentor bios

--- a/src/components/profile-modal.css
+++ b/src/components/profile-modal.css
@@ -81,7 +81,7 @@
 .modal-bio {
   width: 80%;
   margin: 20px auto;
-  text-align: justify;
+  text-align: left;
   font-size: 90%;
 }
 @media only screen and (max-width: 600px) {
